--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -2117,9 +2117,6 @@ border: 1px solid rgba(255, 0, 0, 0.64);
     }
 
     @media only screen and (max-width: 1290px) and (orientation:portrait) {
-       body {
-    zoom:75%;
-}
 
         #settingsmainpane{
                 width:100vw;
@@ -2672,6 +2669,23 @@ border: 1px solid rgba(255, 0, 0, 0.64);
 
 
 <script>
+
+	//So pretty much there was a weird bug where CSS zoom works differently from Chrome VS Safari, so I needed to target each one seperately. Safari would scale each item to 75% as if someone used the browser zoom buttons. Chrome would scale the whole page, only using 75% of the space, leaving a border.
+
+	if (/^((?!chrome|android).)*safari/i.test(navigator.userAgent)) {
+  // If user is using Safari
+  const style = document.createElement('style');
+  style.innerHTML = `
+    @media only screen and (max-width: 1290px) and (orientation:portrait) {
+       body {
+          zoom: 75%;
+       }
+    }
+  `;
+  document.head.appendChild(style);
+}
+
+	
 window.onload = function() {
     const cookiebanner = document.getElementById('cookie-banner');
     const cookiebannerimage = document.getElementById('cookiebannerimg');
