--- a/mcaworship/index.html
+++ b/mcaworship/index.html
@@ -8,6 +8,29 @@
 </head>
 <body>
     <h1>MCA Christmas Concert</h1>
+    <h2>Doxology</h2>
+    <br>
+    <h2>Joyful Joyful We Adore Thee</h2>
+    <br>
+    <h2>Wonderful</h2>
+    <p>Aaliyah Harrington</p>
+    <br>
+    <h2>Light of the World</h2>
+    <p>Lucia Pizon</p>
+    <br>
+    <h2>Noel</h2>
+    <p>Aaliyah Harrington & Lucia Pizon</p>
+    <br>
+    <h2>Mary Did You Know?</h2>
+    <p>Aaliyah Harrington, Ansley Wood, Eliza Kinney, Lucia Pizon, & Zoe Varga</p>
+    <br>
+    <h2>He Has Come (God Rest Ye Merry Gentlemen)</h2>
+    <br>
+    <h2>A Thrill of Hope (Agnus Dei)</h2>
+    <br>
+    <br>
+    <br>
+    <br>
 </body>
 <style>
     body{
@@ -17,12 +40,34 @@
         font-family: Rafaella;
         src: url(Rafaella.ttf);
     }
+    .dm-serif-text-regular {
+  font-family: "DM Serif Text", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.dm-serif-text-regular-italic {
+  font-family: "DM Serif Text", serif;
+  font-weight: 400;
+  font-style: italic;
+}
+    .julius-sans-one-regular {
+  font-family: "Julius Sans One", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
     h1{
         color:#A02E32;
-        font-family:Rafaella;
+        font-family:DM Serif Text;
+    }
+    h2{
+        font-family:Julius Sans One;
     }
     p{
         color:black;
+        font-family:Julius Sans One;
     }
 </style>
 </html>
