--- a/mcaworship/index.html
+++ b/mcaworship/index.html
@@ -60,14 +60,14 @@
 
     h1{
         color:#A02E32;
-        font-family:DM Serif Text;
+  font-family: "DM Serif Text", serif;
     }
     h2{
-        font-family:Julius Sans One;
+  font-family: "Julius Sans One", serif;
     }
     p{
         color:black;
-        font-family:Julius Sans One;
+  font-family: "Julius Sans One", serif;
     }
 </style>
 </html>
