--- a/mcaworship/index.html
+++ b/mcaworship/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MCA Christmas Concert</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Julius+Sans+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>MCA Christmas Concert</h1>
