--- a/mcaworship/index.html
+++ b/mcaworship/index.html
@@ -64,13 +64,15 @@
 
     h1{
         color:#A02E32;
-  font-family: "DM Serif Text", serif;
+  font-family: "Julius Sans One", serif;
     }
     h2{
+                color:#056125;
+
   font-family: "Julius Sans One", serif;
     }
     p{
-        color:black;
+                color:#056125;
   font-family: "Julius Sans One", serif;
     }
 </style>
