--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -40,8 +40,8 @@
         <div class="input-container">
             <p style="font-family:'Dosis'; color:white;">Countdown Dashboard <span class="betatag">BETA</span></p>
 	    <br />
-            <a title="Import saved links from another device" onclick="importLinks();"><i class="fa-solid fa-file-import"></i> Import</a>
-            <a title="Export links as a save code" id="sharebuttonoptions" onclick="exportLinks();"><i class="fa-solid fa-download"></i> Export</a>
+            <a title="Import a .countdown file from another device" onclick="importLinks();"><i class="fa-solid fa-file-import"></i> Import</a>
+            <a title="Export as a .countdown file" id="sharebuttonoptions" onclick="exportLinks();"><i class="fa-solid fa-download"></i> Export</a>
             <a title="Reset all Countdown options and saved data" id="reset" class="warning" onclick="resetcookies();"><i class="fa-solid fa-trash"></i> Reset All</a>
 		<input type="file" id="hiddenFileInput" accept=".countdown" style="display: none;">
         </div>
