--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -4836,8 +4836,8 @@ let schedule_events = [];
                 dayDiv.className = 'schedule-exception-day';
                 const dayName = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'][day];
                 dayDiv.innerHTML = `
-                    <button class="schedule-collapsible" onclick="schedule_toggleCollapsible(this)">${dayName}                         
-		        <a onclick="schedule_editEvent(null, true, '${day}')">Add Event to ${dayName}</a>
+                    <button class="schedule-collapsible" style="font-family: Fredoka One;" onclick="schedule_toggleCollapsible(this)">${dayName}                         
+		        <a onclick="schedule_editEvent(null, true, '${day}')">Add Event</a>
                         <a class="warning" onclick="schedule_removeExceptionDay('${day}')"><i class="fa-solid fa-trash"></i></a>
 		    </button>
                     <div class="schedule-content">
