--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -2570,6 +2570,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
             margin-bottom: 20px;
         }
         .schedule-collapsible {
+		margin-top:20px;
             outline: 1px solid #8426ff;
         background: linear-gradient(to left, rgba(40,23,64,88), #14141400);
         color:white;
