--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -3080,20 +3080,26 @@ window.onload = function() {
                 var confettiType = "none"; //declaring confettitype to none at the very beginning so it's able to be changed anywhere
     if(parameter("confettitype")){
         confettiType = decodeURIComponent(parameter("confettitype")); //if the confetti type exists, set it
+	    alert("1");
     }
     else{
         confettiType = "1";
+	    alert("2");
     }
 
     if(confettiType == "1"){
         ConfettiModeDefault();
+	    alert("3");
     }else if(confettiType == "2"){
         ConfettiModeSnow();
+	    alert("4");
     }else if(confettiType == ""){
         ConfettiModeNone();
+	    alert("5");
     }else{
         ConfettiModeEmoji();
         document.getElementById("confettiEmojiPicker").value = decodeURIComponent(parameter("confettitype"));
+	    alert("6");
     }
 
 
