--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -4854,6 +4854,7 @@ let schedule_events = [];
 
 	function startCountdownSchedule(){
 	     history.replaceState(null, '', `?schedule=eyJzY2hlZHVsZV9ldmVudHMiOltdLCJzY2hlZHVsZV9leGNlcHRpb25zIjp7fX0=`);
+		SetCountDowngeneral();
 	}
 
         function schedule_resetAll(){
