--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -398,8 +398,8 @@
 		</div>
                 <h1 id="scheduleoptions">Countdown Schedule <span class="betatag">BETA</span></h1>
 		<h2 style="font-family: 'Dosis';" >Convert to Countdown Schedule</h2>
-		<div style="text-align:left; width:70%;">
-		    <h3 style="font-family: 'Dosis', sans-serif; color:white;">
+		<div style="text-align:left; width: fit-content;">
+		    <h3 style="font-family: 'Dosis', sans-serif; color:white; font-size:20px;">
 			<i style="color:#3ab6ff" class="fa-solid fa-calendar"></i> Keep track of your recurring events
 			<br>
 		    <i style="color:#00FF5E" class="fa-solid fa-briefcase"></i> Set different schedules for different days
