--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -407,6 +407,7 @@
                 <br>
                 <br>
 		    <div id="presetupScheduleContent">
+		<h2 style="font-family: 'Dosis';">Convert to Countdown Schedule</h2>
 		<div style="text-align:left; width: fit-content;">
 		    <h3 style="font-family: 'Dosis', sans-serif; color:white; font-size:23px; text-justify:inter-word;">
 			<i style="color:#3ab6ff" class="fa-solid fa-calendar"></i> Keep track of your recurring events
