--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -389,7 +389,7 @@
                     <input class="input" type="text" id="audioLink" placeholder="Audio link">
                 </div>
                 <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px;">
-                    Enter a YouTube, SoundCloud, or audio file link to play when the Countdown ends.
+                    Enter a <i class="fa-brands fa-youtube"></i>, <i class="fa-brands fa-soundcloud"></i>, or <i class="fa-solid fa-file-audio"></i> audio file link to play when the Countdown ends.
                     <br />
                     Any ADs that may be placed by the service will remain.
                 </p>
