--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -40,6 +40,7 @@
         <div class="input-container">
             <p style="font-family:'Dosis'; color:white;">Countdown Dashboard <span class="betatag">BETA</span></p>
 	    <br />
+		<a title="Create a new Countdown" href="https://michaeldors.com/mcacountdown/betatimer.html?createnew=1" id="newcountdownbutton"><i class="fa-solid fa-circle-plus"></i> New Countdown</a>
             <a title="Import a .countdown file from another device" onclick="importLinks();"><i class="fa-solid fa-file-import"></i> Import</a>
             <a title="Export as a .countdown file" id="sharebuttonoptions" onclick="exportLinks();"><i class="fa-solid fa-download"></i> Export</a>
             <a title="Reset all Countdown options and saved data" id="reset" class="warning" onclick="resetcookies();"><i class="fa-solid fa-trash"></i> Reset All</a>
@@ -596,6 +597,31 @@ iframe {
         }
 
             #sharebuttonoptions:hover:active {
+                position: relative;
+                box-shadow: none;
+            }
+
+
+	        #newcountdownbutton {
+       font-family: 'Fredoka One';
+        background-color: #00ff5e;
+        text-decoration: none;
+        color: black;
+        box-shadow: 0 7px 0 #00b041;
+        border-radius: 20px;
+        padding: 20px;
+        user-select: none;
+        cursor: pointer;
+        font-size: 20px;
+        font-weight: 100;
+    }
+
+        #newcountdownbutton:hover {
+            position: relative;
+            box-shadow: 0 5px 0 #00b041;
+        }
+
+            #newcountdownbutton:hover:active {
                 position: relative;
                 box-shadow: none;
             }
