--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -187,6 +187,7 @@
                 <Br>
                 <h1 class="textelement">Options</h1>
                 <p class="textelement" style="font-size: 15px; color:#989898 !important; max-width:85%;">
+		<a style="font-family: 'Dosis' , sans-serif; color:#666666 !important; margin-left:30px; margin-bottom:10px;" class="aintext dependencieslink" href="http://c.dors.fyi/"><i style="margin-right:10px;" class="fa-solid fa-house"></i> Home</a>
                     <a style="font-family: 'Dosis' , sans-serif; color:#666666 !important; margin-left:30px; margin-bottom:10px;" class="aintext dependencieslink" href="Information/cookiepolicy"><i style="margin-right:10px;" class="fa-solid fa-cookie-bite"></i> Cookie Policy</a>
                     <a style="font-family: 'Dosis', sans-serif; color:#666666 !important; margin-left:30px;" class="aintext dependencieslink" href="Information/dependencies"><i style="margin-right:10px;" class="fa-solid fa-file-code"></i> Dependencies</a>
                 </p>
