--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -409,7 +409,7 @@
                 <br>
 		    <div id="presetupScheduleContent">
 		<h2 style="font-family: 'Dosis';">Convert to Countdown Schedule</h2>
-		<div style="text-align:left; width: fit-content;">
+		<div style="text-align:left; width:fit-content; max-width:80%;">
 		    <h3 style="font-family: 'Dosis', sans-serif; color:white; font-size:23px; text-justify:inter-word;">
 			<i style="color:#3ab6ff" class="fa-solid fa-calendar"></i> Keep track of your recurring events
 			<br>
