--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -492,6 +492,8 @@
     <div style="width:100%; margin:0px; padding:0px; border-top: #242424 2px solid; border-bottom: #242424 2px solid; margin-top: 150px; background: linear-gradient(to right, rgba(0,0,0,0), rgba(254,154,0,0.2))">
         <h1><i style="color: #FE9A00" class="fa-solid fa-user-lock"></i> Personal Options</h1>
         <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:30px;">Options that are applied across all Countdowns and not shared in the link.</p>
+	<br>
+        <p id="cdscheduledisclaimer" style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:30px; display:none;"><i class="fa-regular fa-calendar-xmark"></i> Some options with a will not apply to Countdown Schedules.</p>
     </div>
     <br />
     <br />
@@ -2862,8 +2864,7 @@ window.onload = function() {
 	document.getElementById("optionsendinganchor").style.opacity = "0.5"; //grey out ending options anchor 	
 	document.getElementById("optionsprogresscontainer").style.display = "none"; //hide ending options area of options
 	document.getElementById("optionsprogressanchor").style.opacity = "0.5"; //grey out progress options anchor	
-	document.getElementById("optionsonlyincludecontainer").style.display = "none"; //hide only include area of options
-	document.getElementById("optionsoianchor").style.opacity = "0.5"; //grey out progress only include anchor	
+	document.getElementById("cdscheduledisclaimer").style.display = ""; //show personal options schedule disclaimer
         document.getElementById("schedule").style.display = ""; //show schedule
 	document.querySelector(".schedule-editor").style.display = ""; //show editor
 	document.getElementById("presetupScheduleContent").style.display = "none"; //hide the info preconversion popup
