--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -4921,8 +4921,7 @@ let schedule_events = [];
 	document.getElementById("optionsendinganchor").style.opacity = "0.5"; //grey out ending options anchor 	
 	document.getElementById("optionsprogresscontainer").style.display = "none"; //hide ending options area of options
 	document.getElementById("optionsprogressanchor").style.opacity = "0.5"; //grey out progress options anchor	
-	document.getElementById("optionsonlyincludecontainer").style.display = "none"; //hide only include area of options
-	document.getElementById("optionsoianchor").style.opacity = "0.5"; //grey out progress only include anchor	
+	document.getElementById("cdscheduledisclaimer").style.display = ""; //show personal options schedule disclaimer
 
 	document.querySelector(".schedule-editor").style.display = ""; //show the schedule editor
 	document.getElementById("presetupScheduleContent").style.display = "none"; //hide the info preconversion popup
