--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -492,7 +492,7 @@
     <div style="width:100%; margin:0px; padding:0px; border-top: #242424 2px solid; border-bottom: #242424 2px solid; margin-top: 150px; background: linear-gradient(to right, rgba(0,0,0,0), rgba(254,154,0,0.2))">
         <h1><i style="color: #FE9A00" class="fa-solid fa-user-lock"></i> Personal Options</h1>
         <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:30px;">Options that are applied across all Countdowns and not shared in the link.</p>
-        <p id="cdscheduledisclaimer" style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:30px; display:none; background-color:#141414; border-radius:100px; padding:5px;"><i class="fa-regular fa-calendar-xmark"></i> Some options with a will not apply to Countdown Schedules.</p>
+        <p id="cdscheduledisclaimer" style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:30px; display:none; background-color:#141414; border-radius:100px; padding:5px; width:fit-content;"><i class="fa-regular fa-calendar-xmark"></i> Some options will not apply to Countdown Schedules.</p>
     </div>
     <br />
     <br />
